--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "1.0.0",
   "type": "module",
+  "editor.formatOnSave": true,
   "scripts": {
     "dev": "vite",
     "build": "vite build",
