--- a/backend/.env.example
+++ b/backend/.env.example
@@ -14,6 +14,12 @@ DB_PASSWORD=your_password
 JWT_SECRET=your_super_secret_jwt_key_change_this
 JWT_EXPIRES_IN=7d
 
+# Company Information (para reportes DGII)
+COMPANY_RNC=000000000
+COMPANY_NAME=Mi Empresa SRL
+COMPANY_ADDRESS=Calle Principal #123
+COMPANY_PHONE=809-555-1234
+
 # DGII API Configuration
 DGII_API_URL=https://dgii.gov.do/api
 DGII_API_KEY=your_dgii_api_key
