--- a/backend/package.json
+++ b/backend/package.json
@@ -12,9 +12,10 @@
     "seed": "node src/scripts/seedDatabase.js",
     "seed:consumidor": "node src/scripts/seedConsumidorFinal.js",
     "test:reports": "node src/scripts/testReports.js",
+    "test:pos": "node src/scripts/testPOS.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["erp", "crm", "dominican-republic", "itbis", "ncf", "dgii"],
+  "keywords": ["erp", "crm", "dominican-republic", "itbis", "ncf", "dgii", "pos"],
   "author": "Zlb",
   "license": "MIT",
   "dependencies": {
