--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,15 @@
     "test:pos": "node src/scripts/testPOS.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["erp", "crm", "dominican-republic", "itbis", "ncf", "dgii", "pos"],
+  "keywords": [
+    "erp",
+    "crm",
+    "dominican-republic",
+    "itbis",
+    "ncf",
+    "dgii",
+    "pos"
+  ],
   "author": "Zlb",
   "license": "MIT",
   "dependencies": {
@@ -29,6 +37,7 @@
     "sequelize": "^6.35.2"
   },
   "devDependencies": {
+    "exceljs": "^4.4.0",
     "nodemon": "^3.0.2"
   }
 }
